# hse_thesis

./: .gitignore  Makefile  main.py  pyproject.toml  readme.md
bandits/: agents.py  aggregating_algorithms.py  bandits.py  online_models.py  slr.py
bandits/pricing/: agents.py  bandits.py
data/: avocado_lgbm_model.txt  sugar_demand.txt
notebooks/: Aggregating algorithms.ipynb  Demand simulation and online regression.ipynb  EDA M5 dataset.ipynb  EDA brazil dataset.ipynb  Gunaev_agents.ipynb  Pricing bandits.ipynb  SimpleBandits.ipynb  UCB-O.ipynb
