[tool.poetry]
name = "hse_thesis"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
packages = [
    { include = "bandits" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.22.3"
pandas = "^1.4.1"
matplotlib = "^3.5.1"
seaborn = "^0.11.2"
tqdm = "^4.63.0"
joblib = "^1.1.0"
jupyterlab = "^3.3.2"
scipy = "^1.8.0"
ipywidgets = "^7.7.0"
jupyter-contrib-nbextensions = "^0.5.1"
jupyter_nbextensions_configurator = "^0.4.1"
jupyterlab-execute-time = "^2.1.0"
gym = "^0.23.1"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
flake8 = "^4.0.1"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
